# hardae350

./: .gitignore  Cargo.toml  justfile  readme.md  rustfmt.toml
.cargo/: config.toml
blink/: Cargo.toml  Gowiners.toml  ae350_blink.gprj  build.rs  memory.x  phy.cst
blink/hw/: top.sv
blink/impl/: project_process_config.json
blink/sw/: main.rs
crates/blink/: Cargo.toml  Gowiners.toml  phy.cst  project.gprj
crates/blink/hw/: top.sv
crates/blink/impl/: project_process_config.json
crates/blink/sw/: main.rs
debug/: ae350.cfg  ae350.gdb  ae350_debug.gprj  phy.cst  top.sv
debug/impl/: ae350_debug_process_config.json
rtl/: hard_ae350.sv  input_debounce.sv  mem_rom.sv  mem_sram.sv  soc_pll.sv
uart/: Cargo.toml  Gowiners.toml  ae350_uart.gdb  ae350_uart.gprj  phy.cst
uart/hw/: top.sv
uart/impl/: ae350_uart_process_config.json
uart/src/: probe.rao
uart/sw/: main.rs
